TierUpCheckInjectionPhase systematically never puts the outer-most loop in an inner loop's vector of outer loops https://bugs.webkit.org/show_bug.cgi?id=186386

Reviewed by Filip Pizlo.

This looks like an 8% speedup on Kraken's imaging-gaussian-blur subtest.

* dfg/DFGTierUpCheckInjectionPhase.cpp:
(JSC::DFG::TierUpCheckInjectionPhase::run):


Canonical link: https://commits.webkit.org/201773@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232602 268f45cc-cd09-0410-ab3c-d52691b4dbfc